# django-starter

./: .dockerignore  .env.dist  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  hello.py  manage.py  pyproject.toml  requirements.txt  start.sh  superuser
.github/workflows/: docker-images.yml
_core/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
_core/settings/: base_settings.py  local_settings.py  prod_settings.py
a_core/: README.md  __init__.py  asgi.py  celery.py  env.py  settings.py  urls.py  utils.py  wsgi.py
a_core/django/: base.py  local.py
a_core/settings/: base.py  dev.py  prod.py
a_home/: apps.py  context_processors.py  models.py  tasks.py  urls.py  views.py
a_home/templates/a_home/: home.html
a_index/: apps.py  views.py
a_messageboard/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
a_messageboard/migrations/: 0001_initial.py
a_messageboard/templates/message_board/: index.html  newsletter.html
a_users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
a_users/migrations/: 0001_initial.py
a_users/templates/a_users/: profile.html  profile_edit.html  profile_settings.html
realtime_chatter/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
requirements/: base.txt  local.txt  prod.txt
templates/: 404.html  base.html  home.html  index.html
templates/a_home/: index.html
templates/account/: login.html
templates/allauth/layouts/: base.html
templates/includes/: header.html  messages.html
templates/layouts/: blank.html  box.html  page.html
templates/partials/: email_form.html  username_form.html
(+5 files in other folders)
