[project]
name = "django-docker-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.2",
    "django-allauth>=65.0.2",
    "django-browser-reload>=1.15.0",
    "django-cleanup>=9.0.0",
    "django-htmx>=1.19.0",
    "pillow>=10.4.0",
]
