[project]
name = "django-docker-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.2",
    "django-allauth>=65.0.2",
    "django-browser-reload>=1.15.0",
    "django-cleanup>=9.0.0",
    "django-htmx>=1.19.0",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.2.0",
    "django-environ>=0.11.2",
    "gunicorn>=23.0.0",
    "django-cloudinary-storage>=0.3.0",
    "django-resized>=1.0.3",
    "redis>=5.1.1",
    "celery>=5.4.0",
    "django-celery-results>=2.5.1",
    "flower>=2.0.1",
    "django-celery-beat>=2.7.0",
]
